--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,13 +13,20 @@
 }
 
 .snake{
-    position: relative;
+    /* position: relative; */
     height: 50px;
     width: 50px;
     background-color: rgb(0, 63, 238);
-
+    /* transform: translateX(50px); */
 }
 
+/* .block{
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(153, 29, 48);
+    margin-right: 50px;
+} */
 /* .health-point head{
     position: absolute;
     width: 50px;
